finalização da criação das telas

--- a/AgendaFornecedores/AgendaFornecedores/Views/Home/Index.cshtml
+++ b/AgendaFornecedores/AgendaFornecedores/Views/Home/Index.cshtml
@@ -3,9 +3,40 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Lista de fornecedores</h1>
+    <h1 class="display-4">Agenda de fornecedores</h1>
 
     <p>Aqui jaz o primeiro texto modificado desse projeto em .NET Core</p>
+
+    <section>
+        <ul>
+            <li style="border:solid grey 2px;margin-bottom:1%;" class="row">
+                <p class="col">nome</p>
+                <p class="col">cnpj</p>
+                <p class="col"> email</p>
+                <p class="col"> contato</p>
+                <p class="col"> anotações</p>
+                <button class="col btn btn-outline-secundary btn-light">Aleterar</button>
+                <button class="col btn btn-outline-secundary btn-light">Deletar</button>
+            </li>
+
+            @{
+                for (int i = 0; i < 3; i++)
+                {
+                    <li style="border:solid grey 2px;margin-bottom:1%;"class="row">
+                    <p class="col">nome @i</p>
+                        <p class="col">cnpj @i</p>
+                        <p class="col"> email @i</p>
+                        <p class="col"> contato @i</p>
+                        <p class="col"> anotações @i</p>
+                        <button class="col btn btn-outline-secundary btn-light">Aleterar</button>
+                        <button class="col btn btn-outline-secundary btn-light">Deletar</button>
+                    </li>                   
+                }
+            }
+        </ul>
+
+    
+    </section>
 
 
     <!--<p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>-->
