--- a/AgendaFornecedores/AgendaFornecedores/Views/Home/ListadeAcoes.cshtml
+++ b/AgendaFornecedores/AgendaFornecedores/Views/Home/ListadeAcoes.cshtml
@@ -10,7 +10,7 @@
 @{
     for(int i = 0;i <2; i++)
     {
-            <li> <h2>Aqui aparecerão todos as realizações dos usuarios desse sistema</h2></li>
+      <li class="row" > <h2 class="col" >Aqui aparecerão todos as realizações dos usuarios desse sistema</h2></li>
        
     }
 }
