--- a/AgendaFornecedores/AgendaFornecedores/Views/Shared/_Layout.cshtml
+++ b/AgendaFornecedores/AgendaFornecedores/Views/Shared/_Layout.cshtml
@@ -20,7 +20,7 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Lista de Fornecedores</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Agenda de Fornecedores</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="ListadeAcoes">Lista de ações</a>
@@ -29,7 +29,7 @@
 
                     </ul>
                    
-                    <button class="nav-link text-dark"><a class="nav-link text-dark"  type="submit" asp-controller="Home" asp-action="Formulario"> Adicionar fornecedor</a></button>
+                    <button class=" btn btn-outline-secundary btn-light"><a class="nav-link text-dark" type="submit" asp-controller="Home" asp-action="Formulario"> Cadastrar fornecedor</a></button>
                 </div>
             </div>
         </nav>
@@ -42,7 +42,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2023 - AgendaFornecedores - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+            &copy; 2023 - AgendaFornecedores 
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
