--- a/AgendaFornecedores/AgendaFornecedores/Views/Home/Formulario.cshtml
+++ b/AgendaFornecedores/AgendaFornecedores/Views/Home/Formulario.cshtml
@@ -3,32 +3,49 @@
     ViewData["Title"] = "Formulario";
 }
 
-<h1 class="text-center display-4">Formulario</h1>
+<h1 class="text-center display-4">Cadastro de Fornecedores de TI </h1>
 
-<form class="align-content-sm-center">
+<section class="row">
 
-     <label for="Nome">Nome: </label>
-        <br>
-    <input type="text" name="Nome" required>
-    <br>
-     <label for="CNPJ">CNPJ: </label>
-        <br>
-    <input type="text" name="CNPJ" required>
-        <br>
-    <label for="contato"> Contato:</label>
-        <br>
-    <input type="text" name="contato"> </input>
-    <br>
-        <label for="email">E-mail: </label>
-        <br>
-    <input type="email" name="Email" required>
-        <br>
-     <label for="Anotações">Anotações adicionais: </label>
-        <br>
-     <textarea name="Anotacoes" id="" cols="25" rows="5"></textarea>
-        <br>
+    <div class="col"></div>
+    <div class="container col">
+    <form action="" method="post" name="formularioAdicionar">
 
-      <button type="submit">Adicionar</button>
+            <div class="form-group">
+              <label for="Nome">Nome:</label>
+                <input type="email" class="form-control" id="nome" placeholder="Didigite o nome do forncedor" name="Nome">
+            </div>
+
+            <div class="form-group">
+                <label for="CNPJ">CNPJ:</label>
+                <input type="text" class="form-control" id="CNPJ" placeholder="Didigite o CNPJ do forncedor" name="CNPJ">
+            </div>
+
+            <div class="form-group">
+                <label for="Contato">Contato:</label>
+                <input type="text" class="form-control" id="contato" placeholder="Didigite o Contato do forncedor" name="Contato">
+            </div>
+
+            <div class="form-group">
+                <label for="email">e-mail:</label>
+                <input type="email" class="form-control" id="email" placeholder="Didigite o e-mail do forncedor" name="Email">
+            </div>
+
+            <div class="form-group">
+                <label for="Anotações">Anotações:</label>
+                    <br />
+                <textarea class="form-control" name="Anotacoes" id="anotacoes" cols="25" rows="5"></textarea>
+            </div>
+
+            <button style="margin-top:1%;" class="btn btn-primary" type="submit">Adicionar</button>
 
     </form>
+    </div>
+    <div class="col"></div>
+
+
+
+
+</section>
+
 
