--- a/AgendaFornecedores/AgendaFornecedores/Views/Shared/_Layout.cshtml
+++ b/AgendaFornecedores/AgendaFornecedores/Views/Shared/_Layout.cshtml
@@ -29,7 +29,7 @@
 
                     </ul>
                    
-                    <button class=" btn btn-outline-secundary btn-light"><a class="nav-link text-dark" type="submit" asp-controller="Home" asp-action="Formulario"> Cadastrar fornecedor</a></button>
+                    <button class=" btn btn-outline-secundary btn-light"><a class="nav-link text-dark" type="submit" asp-controller="Fornecedor" asp-action="Formulario"> Cadastrar fornecedor</a></button>
                 </div>
             </div>
         </nav>
