--- a/AgendaFornecedores/AgendaFornecedores/Views/Home/Index.cshtml
+++ b/AgendaFornecedores/AgendaFornecedores/Views/Home/Index.cshtml
@@ -1,4 +1,8 @@
-﻿@{
+﻿@using System.DirectoryServices.AccountManagement;
+﻿@using Microsoft.AspNetCore.Mvc;
+@using Microsoft.AspNetCore.Http;
+
+@{
     ViewData["Title"] = "Página inicial";
 }
 
@@ -8,36 +12,57 @@
     <p>Aqui jaz o primeiro texto modificado desse projeto em .NET Core</p>
 
     <section>
-        <ul>
-            <li style="border:solid grey 2px;margin-bottom:1%;" class="row">
-                <p class="col">nome</p>
-                <p class="col">cnpj</p>
-                <p class="col"> email</p>
-                <p class="col"> contato</p>
-                <p class="col"> anotações</p>
-                <button class="col btn btn-outline-secundary btn-light">Aleterar</button>
-                <button class="col btn btn-outline-secundary btn-light">Deletar</button>
-            </li>
-
-            @{
-                for (int i = 0; i < 3; i++)
+        @if (Context.Session.GetString("usuario") != null)
+        {
+            <ul>
+                <li style="border:solid grey 2px;margin-bottom:1%;" class="row">
+                    <p class="col">nome</p>
+                    <p class="col">cnpj</p>
+                    <p class="col"> email</p>
+                    <p class="col"> contato</p>
+                    <p class="col"> anotações</p>
+                    <button class="col btn btn-outline-secundary btn-light">Aleterar</button>
+                    <button class="col btn btn-outline-secundary btn-light">Deletar</button>
+                </li>
+                @for (int i = 0; i < 3; i++)
                 {
-                    <li style="border:solid grey 2px;margin-bottom:1%;"class="row">
-                    <p class="col">nome @i</p>
-                        <p class="col">cnpj @i</p>
-                        <p class="col"> email @i</p>
-                        <p class="col"> contato @i</p>
-                        <p class="col"> anotações @i</p>
-                        <button class="col btn btn-outline-secundary btn-light">Aleterar</button>
-                        <button class="col btn btn-outline-secundary btn-light">Deletar</button>
-                    </li>                   
-                }
-            }
-        </ul>
+                   <li style="border:solid grey 2px;margin-bottom:1%;" class="row">
+                     <p class="col">nome @i</p>
+                     <p class="col">cnpj @i</p>
+                     <p class="col"> email @i</p>
+                     <p class="col"> contato @i</p>
+                     <p class="col"> anotações @i</p>
+                     <button class="col btn btn-outline-secundary btn-light">Aleterar</button>
+                     <button class="col btn btn-outline-secundary btn-light">Deletar</button>
+                   </li>
+                 }
+            </ul>
+        }
+        else
+        {
+            <h2>Entre com o seu login do dominio da Bonsucesso por favor</h2>
 
-    
+
+            <form asp-controller="Usuario" asp-action="Index">
+                <label>Nome</label>
+                <input name="nomeUsuario">
+
+                <label>Senha</label>
+                <input name="senhaUsuario">
+
+                <button type="submit">Validar</button>
+            </form>
+
+
+
+        }
+
+
+
+
+
+
+
     </section>
-
-
-    <!--<p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>-->
+ <!--<p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>-->
 </div>
