--- a/AgendaFornecedores/AgendaFornecedores/Views/Fornecedor/Formulario.cshtml
+++ b/AgendaFornecedores/AgendaFornecedores/Views/Fornecedor/Formulario.cshtml
@@ -13,7 +13,7 @@
 
             <div class="form-group">
               <label for="Nome">Nome:</label>
-                <input type="text" class="form-control" id="nome"  required placeholder="Digite o nome do fornecedor" name="nome">
+                <input type="text" class="form-control" id="nome" required placeholder="Digite o nome do fornecedor" name="nomeFornecedor">
             </div>
 
             <div class="form-group">
