--- a/AgendaFornecedores/AgendaFornecedores/Views/Shared/_Layout.cshtml
+++ b/AgendaFornecedores/AgendaFornecedores/Views/Shared/_Layout.cshtml
@@ -1,4 +1,5 @@
-﻿<!DOCTYPE html>
+﻿@using Newtonsoft.Json;
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8" />
@@ -9,10 +10,19 @@
     <link rel="stylesheet" href="~/AgendaFornecedores.styles.css" asp-append-version="true" />
 </head>
 <body>
+    @{
+        Usuario user = new Usuario("", "", false);
+
+        if (Context.Session.GetString("usuario") != null)
+        {
+            user = JsonConvert.DeserializeObject<Usuario>(Context.Session.GetString("usuario"));
+        }
+      }
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container-fluid">
                 <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">AgendaFornecedores</a>
+                <br />
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -20,13 +30,14 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Agenda de Fornecedores</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="ListadeAcoes">Lista de ações</a>
                         </li>
 
-
+                        @if(user.Admin)
+                        {
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="ListadeAcoes">Lista de ações</a>
+                            </li>
+                        }      
                     </ul>
                    
                     <button class=" btn btn-outline-secundary btn-light"><a class="nav-link text-dark" type="submit" asp-controller="Fornecedor" asp-action="Formulario"> Cadastrar fornecedor</a></button>
@@ -42,7 +53,9 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2023 - AgendaFornecedores 
+            ativo: @user.NomeUsuario
+            &copy; 2023 - AgendaFornecedores
+
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
