--- a/AgendaFornecedores/AgendaFornecedores/Views/Home/Index.cshtml
+++ b/AgendaFornecedores/AgendaFornecedores/Views/Home/Index.cshtml
@@ -1,4 +1,6 @@
-﻿@{
+﻿@using Newtonsoft.Json;
+
+@{
     ViewData["Title"] = "Página inicial";
 }
 
@@ -23,13 +25,15 @@
 
 }
 else {
+    Usuario user = new Usuario("", "", false);
 
-    Usuario user = Context.Session.GetString("usuario");
-
-
+    if (Context.Session.GetString("usuario") != null)
+    {
+        user = JsonConvert.DeserializeObject<Usuario>(Context.Session.GetString("usuario"));
+    }
         <section class="text-center">
 
-            <h1 class="display-4">Agenda de fornecedores @Context.Session.GetString("usuario")</h1>
+            <h1 class="display-4">Agenda de fornecedores</h1>
 
             <p>Aqui jaz o primeiro texto modificado desse projeto em .NET Core</p>
 
@@ -41,33 +45,24 @@ else {
                     <p class="col"> contato</p>
                     <p class="col"> anotações</p>
 
-
-
                     
-                    <button class="col btn btn-outline-secundary btn-light">Alterar</button>
 
-                
-
-                    <button class="col btn btn-outline-secundary btn-light">Deletar</button>
                 </li>
-
-
-            @{
-
-                string macaco = "monkey";
-
-                }
-            
                     @for (int i = 0; i < 3; i++)
                     {
                         <li style="border:solid grey 2px;margin-bottom:1%;"class="row">
-                        <p class="col">nome @i @macaco</p>
+                        <p class="col">nome @i</p>
                             <p class="col">cnpj @i</p>
                             <p class="col"> email @i</p>
                             <p class="col"> contato @i</p>
                             <p class="col"> anotações @i</p>
-                            <button class="col btn btn-outline-secundary btn-light">Aleterar</button>
-                            <button class="col btn btn-outline-secundary btn-light">Deletar</button>
+                    @if (user.Admin)
+                    {
+
+                        <button class="col btn btn-outline-secundary btn-light">Alterar</button>
+
+                        <button class="col btn btn-outline-secundary btn-light">Deletar</button>
+                    }
                         </li>                   
                     }
             </ul>
