LIstagem de Fornecedores e açoes finalizadas

--- a/AgendaFornecedores/AgendaFornecedores/Views/Fornecedor/Formulario.cshtml
+++ b/AgendaFornecedores/AgendaFornecedores/Views/Fornecedor/Formulario.cshtml
@@ -41,6 +41,9 @@
             <button onclick="reuturn ConfirmacaoCadastro()" style="margin-top:1%;" class="btn btn-primary" type="submit">Adicionar</button>
 
     </form>
+
+        <p>@TempData["cadastro"]</p>
+
     </div>
     <div class="col"></div>
 
