--- a/AgendaFornecedores/AgendaFornecedores/Views/Home/ListadeAcoes.cshtml
+++ b/AgendaFornecedores/AgendaFornecedores/Views/Home/ListadeAcoes.cshtml
@@ -1,5 +1,5 @@
 ﻿<!--page-->
-<!--model AgendaFornecedores.Views.Home.ListadeAcoesModel-->
+@model IEnumerable<AgendaFornecedores.Models.Acao>
 @{
     ViewData["Title"] = "Lista de Ações";
 
@@ -8,9 +8,9 @@
 
 <ul>
 @{
-    for(int i = 0;i <2; i++)
+    foreach (Acao act in Model)
     {
-      <li class="row" > <h2 class="col" >Aqui aparecerão todos as realizações dos usuarios desse sistema</h2></li>
+      <li class="row" > <h2 class="col" >@act.NomeUsuario @act.Action @act.NomeFornecedor @act.Data</h2></li>
        
     }
 }
