--- a/AgendaFornecedores/AgendaFornecedores/Views/Shared/_Layout.cshtml
+++ b/AgendaFornecedores/AgendaFornecedores/Views/Shared/_Layout.cshtml
@@ -37,14 +37,13 @@
                         @if(user.Admin)
                         {
                             <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="ListadeAcoes">Lista de ações</a>
+                                <a class="nav-link text-dark" asp-controller="Home" asp-action="ListadeAcoes">Lista de ações</a>
                             </li>
                         }      
                     </ul>
                     @if (user.Admin)
                     {
-                        <button class=" btn btn-outline-secundary btn-light"><a class="nav-link text-dark" type="submit" asp-controller="Home" asp-action="AdicionarGrupoAcesso"> Adicionar grupo de acesso</a></button>
-
+                        <button style="margin-right:1%;" class=" btn btn-outline-secundary btn-light"><a class="nav-link text-dark" type="submit" asp-controller="Home" asp-action="AdicionarGrupoAcesso"> Adicionar grupo de acesso</a></button>
                     }
 
                     <button class=" btn btn-outline-secundary btn-light"><a class="nav-link text-dark" type="submit" asp-controller="Fornecedor" asp-action="Formulario"> Cadastrar fornecedor</a></button>
