Finalizado, funcao de adicinar grupopermitido, inicio metodo deletar fornecedor

--- a/AgendaFornecedores/AgendaFornecedores/Views/Fornecedor/Formulario.cshtml
+++ b/AgendaFornecedores/AgendaFornecedores/Views/Fornecedor/Formulario.cshtml
@@ -47,10 +47,13 @@
 
     </form>
 
+       
+
+    </div>
+    <div class="col">
         <p>@TempData["cadastro"]</p>
 
     </div>
-    <div class="col"></div>
 
 </section>
 
